--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="temp">Current temperature is : 25.50</string>
     <string name="pres">Current pressure    is : 50.78</string>
     <string name="final_words">Cheers !!! Happy Coding on your new quest to the land of androidThings.</string>
+    <string name="welcome_text">Welcome to Apps:Lab Tech Tour  Android Things Codelab</string>
 </resources>
